<resources>

    <string name="app_name">Next</string>


    <string name="phys_ru">Physics</string>
    <string name="phys_info">Physics — is the natural science that studies matter,
                             its motion and behavior through space and time, and
                             that studies the related entities of energy and force.</string>
    <string name="title_activity_phys_select">PhysSelectActivity</string>
    <string name="phys_main_image_description">Image: physics</string>
    <string name="phys_key">phys_key</string>
    <string name="search_no_result">No results</string>
    <string name="action_search">Search</string>
    <string name="action_clear">Clear</string>
    <string name="action_sumbit_query">Send request</string>
    <string name="action_voice_search">Voice search</string>
    <string name="search_hint">What are we looking for?</string>
    <string name="phys_card_img_key">phys_card_img_key</string>
    <string name="phys_long_label">Physics</string>
    <string name="phys_short_label">Physics</string>


    <string name="title_activity_phys_tab">PhysTabActivity</string>
    <string name="tab_text_1">GIVEN</string>
    <string name="tab_text_2">SOLUTION</string>
    <string name="second_formula_textview">Substitute the values in the formula</string>
    <string name="answer_textview">Answer:</string>
    <string name="phys_tab_close_hints_description">Hide tooltips</string>
    <string name="phys_tab_key">phys_tab_key</string>
    <string name="phys_tab_not_enough_data">Not enough data!</string>
    <string name="phys_tab_cleared">Cleared</string>
    <string name="phys_tab_target1_title">Tooltip button</string>
    <string name="phys_tab_target1_description">Click to view all available formulas</string>
    <string name="phys_tab_target2_title">Input your text</string>
    <string name="phys_tab_target2_description">Enter the value you know here, but first make sure that it is specified in SI. Swipe left or right for more information.</string>
    <string name="phys_tab_target3_title">Button to view solution</string>
    <string name="phys_tab_target3_description">When you are sure that you have entered all known values, look at the solution to the problem using this button</string>
    <string name="main_card_description">is calculated by the formula:</string>


    <string name="calc_ru">Derivative calculator</string>
    <string name="calc_info">The derivative of a function of a real variable measures
                             the sensitivity to change of the function value with respect
                             to a change in its argument.</string>
    <string name="calc_key">calc_key</string>
    <string name="title_activity_function_calculator">Derivative</string>
    <string name="calc_title1">Your function:</string>
    <string name="calc_right_description">Move input position to the right</string>
    <string name="calc_input_error">This is not an expression!</string>
    <string name="calc_title2">Derived function:</string>
    <string name="func_calc_long_label">Derivative calculator</string>
    <string name="func_calc_short_label">Derivative</string>
    <string name="calc_switch">Show steps</string>
    <string name="calc_graph">Graph</string>
    <string name="calc_hide_button">Hide</string>
    <string name="calc_left_description">Move input position to the left</string>
    <string name="calc_diff_button">Differentiate</string>
    <string name="calc_main_image_description">Image: derivative calculator</string>
    <string name="calc_target1_title">Keyboard</string>
    <string name="calc_target1_description">Click on an empty place or swipe up to open the keyboard</string>
    <string name="calc_target2_title">Find the derivative</string>
    <string name="calc_target2_description">Click to calculate the derivative of your function. Click on the arrows left and right to navigate in the formula</string>
    <string name="calc_target3_title">Graph</string>
    <string name="calc_target3_description">Click to show function graph</string>
    <string name="calc_target4_title">Keyboard</string>
    <string name="calc_target4_description">Tap here to change the keyboard</string>


    <string name="parameter_ru">Parameter Functions</string>
    <string name="title_activity_parameter">Parameter Functions</string>
    <string name="parameter_key">parameter_key</string>
    <string name="parameter_main_image_description">Image: Math</string>
    <string name="parameter_info">The best way to know how a function changes is to build it with a variable parameter.</string>
    <string name="parameter_long_label">Parameter Functions</string>
    <string name="parameter_short_label">Parameter Functions</string>
    <string name="parameter_cannot_buid_the_graph">Cannot buid the graph</string>
    <string name="parameter_enter_formula_with_the_parameter">Enter formula with the parameter</string>
    <string name="parameter_a">a =</string>
    <string name="parameter_enter_parameter_value">Enter parameter value</string>
    <string name="parameter_0">0</string>
    <string name="parameter_build_graph">Build Graph</string>
    <string name="parameter_clear">clear</string>



    <string name="chem_ru">Chemistry</string>
    <string name="chem_ps_ru">Chem</string>
    <string name="chem_info">Chemistry is the scientific discipline involved with elements
                             and compounds composed of atoms, molecules and ions: their composition,
                             structure, properties, behavior and the changes they undergo during a
                             reaction with other substances.</string>
    <string name="chem_key">chem_key</string>
    <string name="title_activity_chem_select_layout">chem_select_layout</string>


    <string name="it_ru">Numeral system</string>
    <string name="title_activity_it">ITActivity</string>
    <string name="it_key">it_key</string>
    <string name="it_main_image_description">Image: Number systems</string>
    <string name="bin_hint">Binary number</string>
    <string name="oct_hint">Octal number</string>
    <string name="dec_hint">Decimal</string>
    <string name="hex_hint">Hexadecimal number</string>
    <string name="str_hint">Text</string>
    <string name="it_clr_fields">Clear fields</string>
    <string name="it_apply_hint">Convert</string>
    <string name="bin_digits">01</string>
    <string name="oct_digits">01234567</string>
    <string name="dec_digits">0123456789</string>
    <string name="hex_digits">0123456789ABCDEF</string>
    <string name="it_info">A numeral system is a writing system for expressing numbers;
                           that is, a mathematical notation for representing numbers of a given set,
                           using digits or other symbols in a consistent manner.</string>
    <string name="it_long_label">Numeral system</string>
    <string name="it_short_label">Numeral system</string>
    <string name="it_copy_to_clipboard">Copied to clipboard</string>
    <string name="it_target1_title">Text field</string>
    <string name="it_target1_description">Enter your binary number here.</string>
    <string name="it_target2_title">Copy</string>
    <string name="it_target2_description">Click to copy text from the box to the right.</string>


    <string name="action_settings">Settings</string>
    <string name="action_settings_ru">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_fulllength_summary">The names of the quantities will become full and the cards, at the same time, will be of different heights</string>
    <string name="pref_fulllength_title">Extended Names</string>
    <string name="pref_hideFab_summary">Hide decision button while scrolling</string>
    <string name="pref_hideFab_title">Button Behavior</string>
    <string name="pref_gravity_summary">The exact value of the acceleration of gravity</string>
    <string name="pref_gravity_title">g</string>
    <string name="pref_phys_help_summary">Click to view training</string>
    <string name="pref_phys_help_title">Tips</string>
    <string name="pref_calc_help_summary">Click to view training</string>
    <string name="pref_calc_help_title">Tips</string>
    <string name="pref_anim_it_summary">Disabling animations will speed up the application</string>
    <string name="pref_anim_it_title">Animations</string>
    <string name="pref_it_help_summary">Click to view training</string>
    <string name="pref_it_help_title">Tips</string>
    <string name="pref_version_summary">1.0</string>
    <string name="pref_version_title">Application version</string>
    <string name="privacy_policy_summary">https://tarashoh.github.io/nextPrivacy/nextPrivacyPolicy.html</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="pref_mail_summary">vashilads@gmail.com</string>
    <string name="pref_mail_title">Feedback</string>
    <string-array name="g_entries">
        <item>9.81 m/s²</item>
        <item>10 m/s²</item>
    </string-array>
    <string-array name="g_values">
        <item>9.81</item>
        <item>10</item>
    </string-array>


</resources>
