<?xml version="1.0" encoding="UTF-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/phys_ru"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="fullLength"
            android:summary="@string/pref_fulllength_summary"
            android:title="@string/pref_fulllength_title"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="hideFab"
            android:summary="@string/pref_hideFab_summary"
            android:title="@string/pref_hideFab_title"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="gravity"
            android:summary="@string/pref_gravity_summary"
            android:title="@string/pref_gravity_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="phys_help"
            android:summary="@string/pref_phys_help_summary"
            android:title="@string/pref_phys_help_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/calc_ru"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="calc_help"
            android:summary="@string/pref_calc_help_summary"
            android:title="@string/pref_calc_help_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/it_ru"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            android:key="anim_it"
            android:summary="@string/pref_anim_it_summary"
            android:title="@string/pref_anim_it_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="it_help"
            android:summary="@string/pref_it_help_summary"
            android:title="@string/pref_it_help_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="О приложении"
        app:iconSpaceReserved="false">

        <Preference
            android:summary="@string/pref_version_summary"
            android:title="@string/pref_version_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="privacy"
            android:summary="@string/privacy_policy_summary"
            android:title="@string/privacy_policy_title"/>

        <Preference
            android:key="mail"
            android:summary="@string/pref_mail_summary"
            android:title="@string/pref_mail_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>