<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParameterActivity"
    android:background="@color/parameterPrimary"
    android:transitionName="@string/parameter_key">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                app:theme="@style/MainToolbarTheme"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/parameter_ru"/>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/param_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_bar"
            android:layout_above="@id/bottom">

            <androidx.cardview.widget.CardView
                android:id="@+id/graph_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    style="@style/ParamStyle"
                    android:visibility="visible" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parameter_cannot_buid_the_graph"
                android:textColor="@color/redError"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/product_sans"
                android:visibility="invisible"/>

            <EditText
                android:id="@+id/enter_formula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/parameterAccent"
                android:fontFamily="@font/roboto_black_italic"
                android:hint="@string/parameter_enter_formula_with_the_parameter"
                android:textColorHint="@color/itHintColor"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:elevation="0dp"
                android:focusedByDefault="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/a_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_black_italic"
                    android:text="@string/parameter_a"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/enter_parameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/parameter_enter_parameter_value"
                    android:text="@string/parameter_0"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:fontFamily="@font/roboto_black_italic"
                    android:textColorHint="@color/itHintColor"
                    android:layout_marginEnd="8dp"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:backgroundTint="@color/parameterAccent"
                    android:elevation="0dp"
                    android:focusedByDefault="true"/>

            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:min="-100"
                android:max="100"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/build_graph"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:text="@string/parameter_build_graph"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:padding="0dp"
                    android:background="@drawable/round_bg"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Button
                    android:id="@+id/clear"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#00A5A3A3"
                    android:text="@string/parameter_clear"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="4dp"
                    android:padding="0dp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>