<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycle_cardview"
    android:layout_width="match_parent"
    android:layout_height="135dp"
    android:layout_rowWeight="1"
    android:layout_columnWeight="1"
    android:layout_margin="7dp"
    android:alwaysDrawnWithCache="false"
    android:animateLayoutChanges="false"
    android:animationCache="false"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/cardview_light_background"
    android:stateListAnimator="@animator/selector_raise"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    android:transitionName="@string/phys_tab_key"
    tools:ignore="PrivateResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/formula_image"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/phys_main_image_description"
            android:transitionName="@string/phys_card_img_key"
            android:src="@drawable/aa" />

        <TextView
            android:id="@+id/formula_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_bold"
            android:singleLine="true"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/formula_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_italic"
            android:singleLine="true"
            android:textColor="@color/primaryText"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
